# auto-slice-video

./: .gitignore  README-en.md  README-zh.md  README.md  autosv.py  pyproject.toml  requirements.txt
autoslice/: autosv.py
autoslice/calculate/: selection.py  sliding_cpu.py
autoslice/slice/: slice_video.py
autosv/: __init__.py  autosv.py  cli.py
autosv/calculate/: selection.py  sliding_cpu.py  sliding_gpu.py
autosv/log/: logger.py
autosv/slice/: slice_video.py
test/: sample.ass  sample2.ass
