[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosv"
version = "0.0.3"
authors = [
  { name="timerring"},
]
description = "Auto slice the highlight shorts based on the density of danmaku."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba>=0.55.1",
    "numpy>=1.21.6",
]

[project.scripts]
autosv = "autosv.cli:cli"

[project.urls]
"Homepage" = "https://github.com/timerring/auto-slice-video"
